{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 193,
  "lineage": "eefa77ce-25ef-4898-993f-22834a131b7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "multi-dr-ec2-region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e449927258d45bc4",
            "arn": "arn:aws:ec2:us-east-1:682033504000:instance/i-0cefa314f7d6a68fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cefa314f7d6a68fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077376eae3caa8dee",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-44-203-222-21.compute-1.amazonaws.com",
            "public_ip": "44.203.222.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd43c1c5f3249b08",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec90f69b415f45c",
            "tags": {
              "Name": "multi-dr-ec2-region1"
            },
            "tags_all": {
              "Name": "multi-dr-ec2-region1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067070f9b72032716"
            ]
          },
          "dependencies": [
            "aws_security_group.multi-dr-sg-region1",
            "aws_subnet.multi-dr-subnet-region1a",
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "multi-dr-ec2-region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d8b47244d950bbb",
            "arn": "arn:aws:ec2:eu-west-1:682033504000:instance/i-067951c974a5a84e1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067951c974a5a84e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d7baf0ec32ac37a",
            "private_dns": "ip-10-1-1-25.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.25",
            "public_dns": "ec2-52-209-39-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.39.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c48faa26b197e28",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccb2e2ebdc68b118",
            "tags": {
              "Name": "multi-dr-ec2-region2"
            },
            "tags_all": {
              "Name": "multi-dr-ec2-region2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c51d7a90b076934f"
            ]
          },
          "dependencies": [
            "aws_security_group.multi-dr-sg-region2",
            "aws_subnet.multi-dr-subnet-region2a",
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "multi-dr-igw-region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:internet-gateway/igw-0ed74ff7cb349dda5",
            "id": "igw-0ed74ff7cb349dda5",
            "owner_id": "682033504000",
            "vpc_id": "vpc-0d1591f7a846f628c"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "multi-dr-igw-region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:internet-gateway/igw-0ca39d3efd63bb775",
            "id": "igw-0ca39d3efd63bb775",
            "owner_id": "682033504000",
            "vpc_id": "vpc-011b0203ac6499446"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "multi-dr-rt-region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:route-table/rtb-0ce49496df3f19390",
            "id": "rtb-0ce49496df3f19390",
            "owner_id": "682033504000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed74ff7cb349dda5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1591f7a846f628c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region1",
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "multi-dr-rt-region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:route-table/rtb-0af66963e91d90fd2",
            "id": "rtb-0af66963e91d90fd2",
            "owner_id": "682033504000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca39d3efd63bb775",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011b0203ac6499446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region2",
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "multi-dr-rta-region1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8fcdc4530afccf2",
            "route_table_id": "rtb-0ce49496df3f19390",
            "subnet_id": "subnet-0cec90f69b415f45c"
          },
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region1",
            "aws_route_table.multi-dr-rt-region1",
            "aws_subnet.multi-dr-subnet-region1a",
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "multi-dr-rta-region1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1256a103e62d6d7",
            "route_table_id": "rtb-0ce49496df3f19390",
            "subnet_id": "subnet-0109b1a71db35aab1"
          },
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region1",
            "aws_route_table.multi-dr-rt-region1",
            "aws_subnet.multi-dr-subnet-region1b",
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "multi-dr-rta-region2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968bef7f6c2a996c",
            "route_table_id": "rtb-0af66963e91d90fd2",
            "subnet_id": "subnet-0ccb2e2ebdc68b118"
          },
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region2",
            "aws_route_table.multi-dr-rt-region2",
            "aws_subnet.multi-dr-subnet-region2a",
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "multi-dr-rta-region2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd5e3d2bd252feec",
            "route_table_id": "rtb-0af66963e91d90fd2",
            "subnet_id": "subnet-0ce82373ed5d54429"
          },
          "dependencies": [
            "aws_internet_gateway.multi-dr-igw-region2",
            "aws_route_table.multi-dr-rt-region2",
            "aws_subnet.multi-dr-subnet-region2b",
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "multi-dr-sg-region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:security-group/sg-067070f9b72032716",
            "description": "Allow HTTP and MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067070f9b72032716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multi-dr-sg-region1",
            "name_prefix": "",
            "owner_id": "682033504000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1591f7a846f628c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "multi-dr-sg-region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:security-group/sg-0c51d7a90b076934f",
            "description": "Allow HTTP and MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c51d7a90b076934f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multi-dr-sg-region2",
            "name_prefix": "",
            "owner_id": "682033504000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011b0203ac6499446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "multi-dr-subnet-region1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:subnet/subnet-0cec90f69b415f45c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cec90f69b415f45c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682033504000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-dr-subnet-region1a"
            },
            "tags_all": {
              "Name": "multi-dr-subnet-region1a"
            },
            "vpc_id": "vpc-0d1591f7a846f628c"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "multi-dr-subnet-region1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:subnet/subnet-0109b1a71db35aab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109b1a71db35aab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682033504000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-dr-subnet-region1b"
            },
            "tags_all": {
              "Name": "multi-dr-subnet-region1b"
            },
            "vpc_id": "vpc-0d1591f7a846f628c"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "multi-dr-subnet-region2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:subnet/subnet-0ccb2e2ebdc68b118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccb2e2ebdc68b118",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682033504000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-dr-subnet-region2a"
            },
            "tags_all": {
              "Name": "multi-dr-subnet-region2a"
            },
            "vpc_id": "vpc-011b0203ac6499446"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "multi-dr-subnet-region2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:subnet/subnet-0ce82373ed5d54429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce82373ed5d54429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682033504000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multi-dr-subnet-region2b"
            },
            "tags_all": {
              "Name": "multi-dr-subnet-region2b"
            },
            "vpc_id": "vpc-011b0203ac6499446"
          },
          "dependencies": [
            "aws_vpc.multi-dr-vpc-region2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "multi-dr-vpc-region1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682033504000:vpc/vpc-0d1591f7a846f628c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8a561bd031fdc77",
            "default_route_table_id": "rtb-02ba987d99c8c0375",
            "default_security_group_id": "sg-0dd8f7503eccf51a0",
            "dhcp_options_id": "dopt-04f2d2e3c71807831",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1591f7a846f628c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ba987d99c8c0375",
            "owner_id": "682033504000",
            "tags": {
              "Name": "multi-dr-vpc-region1"
            },
            "tags_all": {
              "Name": "multi-dr-vpc-region1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "multi-dr-vpc-region2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682033504000:vpc/vpc-011b0203ac6499446",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d42713826a0475e8",
            "default_route_table_id": "rtb-013821534ead59f8a",
            "default_security_group_id": "sg-0914d8b1dcaf93059",
            "dhcp_options_id": "dopt-09f6bb776e70ce3f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011b0203ac6499446",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013821534ead59f8a",
            "owner_id": "682033504000",
            "tags": {
              "Name": "multi-dr-vpc-region2"
            },
            "tags_all": {
              "Name": "multi-dr-vpc-region2"
            }
          }
        }
      ]
    }
  ]
}